--- a/recipes/penneRustica.html
+++ b/recipes/penneRustica.html
@@ -35,5 +35,31 @@
             few sliced pimentos on top. Be sure to get the sliced pimentos, not diced. You want long
              pieces just like those they use at the restaurant.
     </p>
+    <h3>Ingredients</h3>
+    <h4>Gratinata Sauce</h4>
+    <ul>
+        <li>2 Teaspoons butter</li>
+        <li>2 Teaspoons chopped garlic</li>
+        <li>1 Teaspoons Dijon mustard</li>
+        <li>1 Teaspoon dill</li>
+        <li>1 Teaspoon chopped rosemary</li>
+        <li>1 cup marsala wine</li>
+        <li>1/4 Teaspoon cayenne pepper</li>
+        <li>8 cups heavy cream</li>
+    </ul>
+    <h4>Penne Rustica</h4>
+    <ul>
+        <li>1 ounce pancetta or 1 ounce bacon</li>
+        <li>18 shrimp, peeled and deveined</li>
+        <li>12 ounces grilled chicken breasts, sliced</li>
+        <li>16-24 ounces penne pasta, cooked</li>
+        <li>3 teaspoons chopped pimiento</li>
+        <li>6 ounces butter</li>
+        <li>1 teaspoon chopped shallot</li>
+        <li>1 pinch salt and pepper</li>
+        <li>1 cup parmesan cheese</li>
+        <li>1/2 teaspoon paprika</li>
+        <li>6 sprigs fresh rosemary</li>
+    </ul>
 </body>
 </html>
