--- a/recipes/penneRustica.html
+++ b/recipes/penneRustica.html
@@ -61,5 +61,23 @@
         <li>1/2 teaspoon paprika</li>
         <li>6 sprigs fresh rosemary</li>
     </ul>
+    <h3>Directions</h3>
+    <ol>
+        <li>For Gratinata Sauce: Saute butter, garlic, and rosemary until garlic begins to brown.</li>
+        <li>Add Marsala wine and reduce by one-third.</li>
+        <li>Add remaining ingredients, reduce by half of the original volume.</li>
+        <li>Set aside.</li>
+        <li>For Penne Rustica: Saute pancetta until it begins to brown.</li>
+        <li>Add butter, shallots, and shrimp.</li>
+        <li>Cook until shrimp are evenly pink but still translucent.</li>
+        <li>Add chicken, salt, pepper, and mix thoroughly.</li>
+        <li>Add gratinata sauce and 1/2 cup parmesan cheese.</li>
+        <li>Simmer until sauce thickens.</li>
+        <li>In a large bowl, combine shrimp& chicken mixture with the cooked pasta.</li>
+        <li>Pour into a large casserole dish or roaster.</li>
+        <li>Top with remaining cheese, pimientos and sprinkle with paprika.</li>
+        <li>Bake at 475 degrees for 10 to 15 minutes.</li>
+        <li>Remove and garnish with fresh rosemary sprig.</li>
+    </ol>
 </body>
 </html>
