--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <h1>Odin Recipes</h1>
     <ul>
         <li><a href="recipes/penneRustica.html">Penne Rustica</a>
-        <li><a href="recipes/yourrecipe.html">Recipe Title 2</a></li>
-        <li><a href="recipes/yourrecipe.html">Recipe Title 3</a></li>
+        <li><a href="recipes/chickenMarsala.html">Chicken Marsala</a></li>
+
       </ul>
 </body>
 </html>
